<resources>
    <string name="app_name">SingleScreen</string>
    <string name="title">Minerva</string>
    <string name="descript">A place where photography knows no leaps and bounds. Time to channelize your inner nirvana of clicking images with fun and uniqueness imbibed in it. Looking forward for your active and enchanting support, do join early for additional perks.</string>
    <string name="address">514 S. Magnolia St. Orlando, FL 32806</string>
    <string name="phone">+ 91 9022983935</string>
    <string name="mail">vivek6960@gmail.com</string>
    <string name="perks">For further information and early bird discount do vist us on www.random.org</string>
</resources>
