<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradi" >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/view_mar"
        android:layout_height="@dimen/view_height">

    </android.support.v4.view.ViewPager>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_below="@+id/viewPager"
        android:background="@drawable/gradi1"
        android:fontFamily="cursive"
        android:layout_margin="@dimen/title_margin"
        android:text="@string/title"
        android:textStyle="bold"
        android:textSize="@dimen/title_size"
        />

    <TextView
        android:id="@+id/descript"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/descript_color"
        android:layout_below="@+id/title"
        android:text="@string/descript"
        android:padding="@dimen/descript_size"/>

    <ImageView
        android:id="@+id/addr"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/icon_height"
        android:layout_below="@+id/descript"
        android:src="@drawable/address"/>

    <TextView
        android:id="@+id/addr1"
        android:layout_width="wrap_content"
        android:autoLink="map"
        android:layout_height="wrap_content"
        android:layout_below="@id/descript"
        android:padding="@dimen/info_pad"
        android:textSize="@dimen/text_size"
        android:textColorLink="@color/text_color"
        android:layout_toRightOf="@+id/addr"
        android:text="@string/address"/>

    <ImageView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/icon_height"
        android:layout_marginLeft="@dimen/phone_margin"
        android:layout_below="@+id/addr"
        android:src="@drawable/phone"/>

    <TextView
        android:id="@+id/phone1"
        android:layout_width="wrap_content"
        android:autoLink="phone"
        android:textColorLink="@color/text_color"
        android:layout_height="wrap_content"
        android:layout_below="@id/addr1"
        android:padding="@dimen/info_pad"
        android:textSize="@dimen/text_size"
        android:layout_toRightOf="@+id/addr"
        android:text="@string/phone"/>

    <ImageView
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/mail_height"
        android:layout_below="@id/phone"
        android:src="@drawable/email"
        android:layout_marginLeft="@dimen/mail_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:autoLink="email"
        android:textColorLink="@color/text_color"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"
        android:padding="@dimen/info_pad"
        android:textSize="@dimen/text_size"
        android:layout_toRightOf="@+id/addr"
        android:text="@string/mail"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:padding="@dimen/info_pad"
        android:textColor="@color/text_color"
        android:layout_margin="@dimen/extra_margin"
        android:text="@string/perks"
        android:layout_below="@id/mail"/>

</RelativeLayout>

</ScrollView>